Modify OpenAPI specs

--- a/comment-service/comment-service-api/src/main/resources/static/comments-api.yaml
+++ b/comment-service/comment-service-api/src/main/resources/static/comments-api.yaml
@@ -85,7 +85,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/GenericErrorResponse"
+                oneOf:
+                  - $ref: '#/components/schemas/GenericErrorResponse'
+                  - $ref: '#/components/schemas/ValidationErrorResponse'
 
     post:
       summary: Create comment
@@ -116,9 +118,10 @@ paths:
           description: Invalid request
           content:
             application/json:
-              oneOf:
-                - $ref: '#/components/schemas/GenericErrorResponse'
-                - $ref: '#/components/schemas/ValidationErrorResponse'
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/GenericErrorResponse'
+                  - $ref: '#/components/schemas/ValidationErrorResponse'
         '422':
           description: Resource not found
           content:
@@ -157,9 +160,10 @@ paths:
           description: Invalid request
           content:
             application/json:
-              oneOf:
-                - $ref: '#/components/schemas/GenericErrorResponse'
-                - $ref: '#/components/schemas/ValidationErrorResponse'
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/GenericErrorResponse'
+                  - $ref: '#/components/schemas/ValidationErrorResponse'
         '422':
           description: Resource not found
           content:
@@ -203,9 +207,10 @@ paths:
           description: Invalid request
           content:
             application/json:
-              oneOf:
-                - $ref: '#/components/schemas/GenericErrorResponse'
-                - $ref: '#/components/schemas/ValidationErrorResponse'
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/GenericErrorResponse'
+                  - $ref: '#/components/schemas/ValidationErrorResponse'
         '422':
           description: Resource not found
           content:
@@ -239,9 +244,10 @@ paths:
           description: Invalid request
           content:
             application/json:
-              oneOf:
-                - $ref: '#/components/schemas/GenericErrorResponse'
-                - $ref: '#/components/schemas/ValidationErrorResponse'
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/GenericErrorResponse'
+                  - $ref: '#/components/schemas/ValidationErrorResponse'
         '422':
           description: Resource not found
           content:
